--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import "./layouts/normalize.css";
 @font-face {
   font-family: "Montserrat";
@@ -38,17 +37,12 @@
   justify-content: space-between;
   align-items: center;
   width: 60%;
-  height: 57.7%;
+  height: 61.7%;
   cursor: pointer;
 }
 .side-bar nav li {
   width: 100%;
   list-style-type: none;
-  transition-duration: 0.6s;
-}
-.side-bar nav li :hover {
-  transition-duration: 0.6s;
-  margin-left: 9%;
 }
 
 .side-bar__link {
@@ -59,6 +53,11 @@
   width: 100%;
   text-decoration: none;
   color: white;
+  transition-duration: 0.6s;
+}
+.side-bar__link :hover {
+  transition-duration: 0.6s;
+  margin-left: 20%;
 }
 .side-bar__link img {
   width: 67%;
@@ -217,7 +216,7 @@ body {
   transform: rotate(45deg);
 }
 
-.d-test_hidden {
+.accordeon_hidden {
   opacity: 0;
   visibility: hidden;
   height: 0px;
@@ -314,17 +313,17 @@ body {
     width: 45vw;
   }
   .diary-water-tracker__text,
-.diary-water-tracker__top-bar-name,
-.diary-table-string__meal-name,
-.diary-diet-tracker__calendar-btn {
+  .diary-water-tracker__top-bar-name,
+  .diary-table-string__meal-name,
+  .diary-diet-tracker__calendar-btn {
     font-size: 1.5vw;
   }
   .diary-table-string__column-names {
     font-size: 1vw;
   }
   .diary-water-tracker__crrnt-res,
-.diary-water-tracker__top-res,
-.diary-water-tracker__crrnt-res-ml {
+  .diary-water-tracker__top-res,
+  .diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
@@ -344,17 +343,17 @@ body {
     margin: auto;
   }
   .diary-water-tracker__text,
-.diary-water-tracker__top-bar-name,
-.diary-table-string__meal-name,
-.diary-diet-tracker__calendar-btn {
+  .diary-water-tracker__top-bar-name,
+  .diary-table-string__meal-name,
+  .diary-diet-tracker__calendar-btn {
     font-size: 1.2vw;
   }
   .diary-table-string__column-names {
     font-size: 1vw;
   }
   .diary-water-tracker__crrnt-res,
-.diary-water-tracker__top-res,
-.diary-water-tracker__crrnt-res-ml {
+  .diary-water-tracker__top-res,
+  .diary-water-tracker__crrnt-res-ml {
     font-size: 1.6vw;
   }
 }
@@ -366,12 +365,6 @@ body {
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   background-color: #E4EEEE;
 }
@@ -426,8 +419,7 @@ button {
 .profile-RSK__recommendations {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 6%;
+  justify-content: space-evenly;
   width: 100%;
   height: 25.78%;
   background-color: #E4EEEE;
@@ -457,7 +449,7 @@ button {
 }
 
 .profile-RSK__weight {
-  margin-top: 2%;
+  margin: 2% 0 0 5%;
 }
 .profile-RSK__weight span {
   font-weight: 700;
@@ -489,6 +481,8 @@ button {
 .profile-RSK__form-input {
   width: 60%;
   height: 4.29vh;
+  min-height: 35px;
+  max-height: 90px;
   padding-left: 8px;
   background-color: #E4EEEE;
   border: 1px solid #089BAB;
@@ -501,6 +495,8 @@ button {
   align-self: center;
   width: 41%;
   height: 12%;
+  min-height: 44px;
+  max-height: 105px;
   border: 0;
   border-radius: 15px;
   background-color: #F7C78E;
@@ -536,29 +532,29 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
-  width: 100%;
+  width: 85%;
   height: 42.87vh;
   padding: 9.34% 9%;
   background-color: white;
   border-radius: 35px;
 }
-.profile-welcome__form img {
-  width: 32%;
-  left: 34.6%;
-  top: -20.22%;
+
+.profile-welcome__img {
   position: absolute;
+  top: -7.81vh;
+  height: 16.63vh;
   border-radius: 50%;
 }
 
 .profile-welcome__form-button {
   align-self: center;
-  justify-self: flex-end;
-  position: absolute;
-  bottom: 4vh;
+  margin-top: 7%;
   width: 36%;
   height: 5.37vh;
+  min-height: 44px;
+  max-height: 105px;
   border: 0;
   border-radius: 15px;
   background-color: #F7C78E;
@@ -576,12 +572,15 @@ button {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 11.46vh;
-  margin-top: 3.23vh;
+  height: 10.46vh;
+  min-height: 80px;
+  margin-top: 4.23vh;
 }
 
 .profile-welcome__form-input {
   height: 4.29vh;
+  min-height: 35px;
+  max-height: 90px;
   padding-left: 8px;
   background-color: #E4EEEE;
   border: 1px solid #089BAB;
@@ -591,12 +590,14 @@ button {
 }
 
 .profile-welcome__form-greet {
-  margin-top: 6.52vh;
+  margin-top: 12%;
 }
 
 .profile-welcome__button-reg {
   width: 44%;
   height: 5.37vh;
+  min-height: 44px;
+  max-height: 105px;
   border: 0;
   border-radius: 15px;
   background-color: #F7C78E;
@@ -608,17 +609,7 @@ button {
 
 .profile-welcome__button-reg:hover {
   transition-duration: 1s;
-  background-color: #09b4c7;
-}
-
-.b-container {
-  width: 200px;
-  height: 150px;
-  background-color: #ccc;
-  margin: 0px auto;
-  padding: 10px;
-  font-size: 30px;
-  color: #fff;
+  background-color: #148794;
 }
 
 .profile-notification {
@@ -631,14 +622,278 @@ button {
   top: 0px;
 }
 
-.b-popup .b-popup-content {
-  margin: 40px auto 0px auto;
-  width: 100px;
-  height: 40px;
+.profile-notification__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 500px;
+  max-width: 738px;
+  width: 51.25vw;
+  max-height: 268px;
+  height: 26.17vh;
   padding: 10px;
-  background-color: #c5c5c5;
-  border-radius: 5px;
+  margin: 9.76vh auto 0px auto;
+  border: solid 7px #F7C78E;
+  background-color: white;
+  border-radius: 35px;
   box-shadow: 0px 0px 10px #000;
+}
+.profile-notification__content img {
+  width: 8.8%;
+  margin-bottom: 1.19%;
+}
+.profile-notification__content div {
+  text-align: center;
+}
+
+.profile-notification__text {
+  line-height: 180%;
+}
+.profile-notification__text a {
+  color: #089BAB;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.profile-user__settings {
+  align-self: flex-end;
+  margin-top: 3.51vh;
+  height: 5.37vh;
+  cursor: pointer;
+}
+
+.profile-user {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+}
+
+.profile-user__data {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 29vh;
+  padding: 3.9vh;
+  background-color: white;
+  border-radius: 35px;
+}
+.profile-user__data img {
+  position: absolute;
+  top: -7.81vh;
+  height: 15.62vh;
+}
+
+.profile-user__kkal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 34vh;
+  padding: 2.44vh 6.35% 2.44vh 7.29%;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__kkal-wrapper {
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.profile-user__kkal-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 50%;
+}
+
+.profile-user__kkal-name {
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__kkal-amount {
+  margin-bottom: 2%;
+  font-weight: 400;
+  font-size: 25px;
+  font-family: "Inter", sans-serif;
+}
+
+.profile-user__doughnut-chart {
+  height: 18.28vh;
+}
+
+.profile-user__macro {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 8.83vh;
+  margin-top: 1vh;
+}
+
+.profile-user__macro-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30%;
+}
+.profile-user__macro-block h3 {
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__macro-amount {
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 400;
+  font-size: 18px;
+  font-family: "Inter", sans-serif;
+}
+
+.profile-user__macro-scale {
+  width: 100%;
+  height: 1.46vh;
+  background-color: rgba(0, 0, 0, 0.185);
+  border-radius: 5px;
+}
+
+.profile-user__macro-scale-line {
+  height: 100%;
+  border-radius: 5px;
+}
+
+.profile-user__macro-scale-line_carbs {
+  width: 55%;
+  background-color: rgba(0, 195, 255, 0.6);
+}
+
+.profile-user__macro-scale-line_protein {
+  width: 55%;
+  background-color: rgba(255, 0, 21, 0.6);
+}
+
+.profile-user__macro-scale-line_fat {
+  width: 55%;
+  background-color: rgba(255, 217, 0, 0.6);
+}
+
+.profile-user__water-img {
+  height: 4.88vh;
+  margin-left: 5%;
+}
+
+.profile-user__water {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 8.7vh;
+  margin-top: 4.3vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__water-tracker {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 41.5%;
+  height: 100%;
+  font-weight: 400;
+  font-size: 23px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__water-amount {
+  display: flex;
+  align-items: center;
+  margin-right: 10%;
+  font-weight: 400;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__date {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 3.95vh;
+  padding: 0 3% 0 3%;
+}
+.profile-user__date h2 {
+  font-weight: 700;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__date-value {
+  font-weight: 400;
+  font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__date-devider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 35%;
+}
+
+.profile-user__date-line {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
+  height: 50%;
+  width: 100%;
+}
+
+.profile-user__states {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2vh;
+  width: 65.8%;
+  height: 5.76vh;
+}
+
+.profile-user__data-name {
+  font-weight: 600;
+  font-size: 26px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__data-age {
+  margin-top: 1vh;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__states-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  font-weight: 400;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.profile-user__states-name {
+  color: #089BAB;
+}
+
+.profile-user__states-value {
+  font-family: "Inter", sans-serif;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
@@ -649,9 +904,6 @@ button {
     font-weight: 400;
     font-size: 23px;
     font-family: "Montserrat", sans-serif;
-  }
-  .profile-RSK__recommendations {
-    padding: 3%;
   }
   .profile-RSK__kkal {
     font-weight: 500;
@@ -664,26 +916,25 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__weight {
-    margin-left: 2%;
     font-weight: 400;
     font-size: calc((100vw - 373px) / 53);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-.profile-paternity {
+  .profile-paternity {
     font-weight: 300;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-.profile-welcome__form-input {
+  .profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 1440px) / 160);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-.profile-welcome__form-button,
-.profile-welcome__button-reg {
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
     font-weight: 600;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
@@ -692,16 +943,51 @@ button {
     width: 34.72vw;
     margin-right: 5.35vw;
   }
-  .profile-welcome__form img {
-    top: -25.2%;
-    left: 35.26%;
-    width: 30%;
-  }
   .profile-welcome__form-greet {
-    margin-top: 5.52vh;
     font-weight: 600;
     font-size: calc((100vw + 2720px) / 160);
     font-family: "Montserrat", sans-serif;
+  }
+  .profile-welcome__form-inputs {
+    margin-top: 3.23vh;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: 18px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-user__data-name {
+    font-weight: 600;
+    font-size: calc((100vw + 640px) / 80);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-user__data-age {
+    font-size: calc((100vw + 160px) / 80);
+  }
+  .profile-user__date h2,
+  .profile-user__kkal-amount {
+    font-size: calc((100vw - 106px) / 53);
+  }
+  .profile-user__date-value {
+    font-size: calc((100vw - 266px) / 53);
+  }
+  .profile-user__states-block {
+    font-size: 20px;
+  }
+  .profile-user__kkal-name {
+    font-size: calc((100vw + 160px) / 80);
+  }
+  .profile-user__macro-block h3 {
+    font-size: calc((100vw - 373px) / 53);
+  }
+  .profile-user__macro-amount {
+    font-size: calc((100vw + 1440px) / 160);
+  }
+  .profile-user__water-tracker {
+    font-size: calc((100vw + 400px) / 80);
+  }
+  .profile-user__water-amount {
+    font-size: calc((100vw - 106px) / 53);
   }
 }
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
@@ -729,20 +1015,20 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-.profile-paternity {
+  .profile-paternity {
     font-weight: 300;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-.profile-welcome__form-input {
+  .profile-welcome__form-input {
     font-weight: 300;
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-.profile-welcome__form-button,
-.profile-welcome__button-reg {
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
     font-weight: 600;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
@@ -754,6 +1040,11 @@ button {
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: 26px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: 25px;
     font-family: "Montserrat", sans-serif;
   }
 }
@@ -782,20 +1073,20 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-.profile-paternity {
+  .profile-paternity {
     font-weight: 300;
     font-size: calc((100vw - 40px) / 94);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-.profile-welcome__form-input {
+  .profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 70px) / 110);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-.profile-welcome__form-button,
-.profile-welcome__button-reg {
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
     font-weight: 600;
     font-size: calc((100vw - 211px) / 85);
     font-family: "Montserrat", sans-serif;
@@ -804,12 +1095,14 @@ button {
     width: 26vw;
     margin-right: 4vw;
   }
-  .profile-welcome__form img {
-    top: -17.22%;
-  }
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: calc((100vw - 290px) / 62);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: calc((100vw + 12580px) / 580);
     font-family: "Montserrat", sans-serif;
   }
 }
@@ -835,6 +1128,11 @@ button {
   background-color: #E4EEEE;
 }
 
+.profile-welcome__wripper,
+.profile-paternity {
+  display: none;
+}
+
 @media screen and (max-width: 1279px) {
   .wrapper {
     display: none;
@@ -850,5 +1148,3 @@ button {
     width: 75vw;
   }
 }/*# sourceMappingURL=main.css.map */
-=======
->>>>>>> dev
