--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import "./layouts/normalize.css";
 @font-face {
   font-family: "Montserrat";
@@ -38,17 +37,12 @@
   justify-content: space-between;
   align-items: center;
   width: 60%;
-  height: 57.7%;
+  height: 61.7%;
   cursor: pointer;
 }
 .side-bar nav li {
   width: 100%;
   list-style-type: none;
-  transition-duration: 0.6s;
-}
-.side-bar nav li :hover {
-  transition-duration: 0.6s;
-  margin-left: 9%;
 }
 
 .side-bar__link {
@@ -59,6 +53,11 @@
   width: 100%;
   text-decoration: none;
   color: white;
+  transition-duration: 0.6s;
+}
+.side-bar__link :hover {
+  transition-duration: 0.6s;
+  margin-left: 20%;
 }
 .side-bar__link img {
   width: 67%;
@@ -217,7 +216,7 @@ body {
   transform: rotate(45deg);
 }
 
-.d-test_hidden {
+.accordeon_hidden {
   opacity: 0;
   visibility: hidden;
   height: 0px;
@@ -366,12 +365,6 @@ body {
   font-family: "Inter";
   src: url(../../../fonts/Inter.ttf);
 }
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   background-color: #E4EEEE;
 }
@@ -426,8 +419,7 @@ button {
 .profile-RSK__recommendations {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 6%;
+  justify-content: space-evenly;
   width: 100%;
   height: 25.78%;
   background-color: #E4EEEE;
@@ -457,7 +449,7 @@ button {
 }
 
 .profile-RSK__weight {
-  margin-top: 2%;
+  margin: 2% 0 0 5%;
 }
 .profile-RSK__weight span {
   font-weight: 700;
@@ -489,6 +481,8 @@ button {
 .profile-RSK__form-input {
   width: 60%;
   height: 4.29vh;
+  min-height: 35px;
+  max-height: 90px;
   padding-left: 8px;
   background-color: #E4EEEE;
   border: 1px solid #089BAB;
@@ -501,6 +495,8 @@ button {
   align-self: center;
   width: 41%;
   height: 12%;
+  min-height: 44px;
+  max-height: 105px;
   border: 0;
   border-radius: 15px;
   background-color: #F7C78E;
@@ -536,29 +532,27 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
-  width: 100%;
+  width: 90%;
   height: 42.87vh;
   padding: 9.34% 9%;
   background-color: white;
   border-radius: 35px;
 }
 .profile-welcome__form img {
-  width: 32%;
-  left: 34.6%;
-  top: -20.22%;
-  position: absolute;
+  margin-top: -30%;
+  width: 36%;
   border-radius: 50%;
 }
 
 .profile-welcome__form-button {
   align-self: center;
-  justify-self: flex-end;
-  position: absolute;
-  bottom: 4vh;
+  margin-top: 5%;
   width: 36%;
   height: 5.37vh;
+  min-height: 44px;
+  max-height: 105px;
   border: 0;
   border-radius: 15px;
   background-color: #F7C78E;
@@ -576,12 +570,15 @@ button {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 11.46vh;
-  margin-top: 3.23vh;
+  height: 10.46vh;
+  min-height: 80px;
+  margin-top: 4.23vh;
 }
 
 .profile-welcome__form-input {
   height: 4.29vh;
+  min-height: 35px;
+  max-height: 90px;
   padding-left: 8px;
   background-color: #E4EEEE;
   border: 1px solid #089BAB;
@@ -591,12 +588,14 @@ button {
 }
 
 .profile-welcome__form-greet {
-  margin-top: 6.52vh;
+  margin-top: 5%;
 }
 
 .profile-welcome__button-reg {
   width: 44%;
   height: 5.37vh;
+  min-height: 44px;
+  max-height: 105px;
   border: 0;
   border-radius: 15px;
   background-color: #F7C78E;
@@ -608,17 +607,7 @@ button {
 
 .profile-welcome__button-reg:hover {
   transition-duration: 1s;
-  background-color: #09b4c7;
-}
-
-.b-container {
-  width: 200px;
-  height: 150px;
-  background-color: #ccc;
-  margin: 0px auto;
-  padding: 10px;
-  font-size: 30px;
-  color: #fff;
+  background-color: #148794;
 }
 
 .profile-notification {
@@ -631,14 +620,69 @@ button {
   top: 0px;
 }
 
-.b-popup .b-popup-content {
-  margin: 40px auto 0px auto;
-  width: 100px;
-  height: 40px;
+.profile-notification__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 500px;
+  max-width: 738px;
+  width: 51.25vw;
+  max-height: 268px;
+  height: 26.17vh;
   padding: 10px;
-  background-color: #c5c5c5;
-  border-radius: 5px;
+  margin: 9.76vh auto 0px auto;
+  border: solid 7px #F7C78E;
+  background-color: white;
+  border-radius: 35px;
   box-shadow: 0px 0px 10px #000;
+}
+.profile-notification__content img {
+  width: 8.8%;
+  margin-bottom: 1.19%;
+}
+.profile-notification__content div {
+  text-align: center;
+}
+
+.profile-notification__text {
+  line-height: 180%;
+}
+.profile-notification__text a {
+  color: #089BAB;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.profile-user__data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  height: 29vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__kkal {
+  width: 100%;
+  height: 34vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__water {
+  width: 100%;
+  height: 8.7vh;
+  margin-top: 4.3vh;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.profile-user__date {
+  width: 100%;
+  height: 1.95vh;
 }
 
 @media screen and (min-width: 1280px) and (max-width: 1440px) {
@@ -649,9 +693,6 @@ button {
     font-weight: 400;
     font-size: 23px;
     font-family: "Montserrat", sans-serif;
-  }
-  .profile-RSK__recommendations {
-    padding: 3%;
   }
   .profile-RSK__kkal {
     font-weight: 500;
@@ -664,7 +705,6 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__weight {
-    margin-left: 2%;
     font-weight: 400;
     font-size: calc((100vw - 373px) / 53);
     font-family: "Montserrat", sans-serif;
@@ -692,21 +732,26 @@ button {
     width: 34.72vw;
     margin-right: 5.35vw;
   }
-  .profile-welcome__form img {
-    top: -25.2%;
-    left: 35.26%;
-    width: 30%;
-  }
   .profile-welcome__form-greet {
-    margin-top: 5.52vh;
     font-weight: 600;
     font-size: calc((100vw + 2720px) / 160);
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-welcome__form-inputs {
+    margin-top: 3.23vh;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1441px) and (max-width: 1920px) {
   .profile-RSK {
     width: 627px;
+  }
+  .profile-welcome img {
+    top: -17.2%;
   }
   .profile-RSK__title {
     font-weight: 400;
@@ -751,15 +796,26 @@ button {
     width: 500px;
     margin-right: 77px;
   }
+  .profile-welcome__form img {
+    top: -22%;
+  }
   .profile-welcome__form-greet {
     font-weight: 600;
     font-size: 26px;
+    font-family: "Montserrat", sans-serif;
+  }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: 25px;
     font-family: "Montserrat", sans-serif;
   }
 }
 @media screen and (min-width: 1921px) {
   .profile-RSK {
     width: 32.66vw;
+  }
+  .profile-welcome img {
+    top: -22.2%;
   }
   .profile-RSK__title {
     font-weight: 400;
@@ -812,6 +868,11 @@ button {
     font-size: calc((100vw - 290px) / 62);
     font-family: "Montserrat", sans-serif;
   }
+  .profile-notification__text {
+    font-weight: 500;
+    font-size: calc((100vw + 12580px) / 580);
+    font-family: "Montserrat", sans-serif;
+  }
 }
 .font-black {
   color: rgba(0, 0, 0, 0.7);
@@ -850,5 +911,3 @@ button {
     width: 75vw;
   }
 }/*# sourceMappingURL=main.css.map */
-=======
->>>>>>> dev
