--- a/assets/styles/scss/pages/addnewproduct.scss
+++ b/assets/styles/scss/pages/addnewproduct.scss
@@ -1,7 +1,7 @@
 .wrapper{
     font-family: "Montserrat";
     font-weight: 700;
-    font-size: 14px;
+    font-size: 12px;
   }
  
  .diary__newproduct__popup {
@@ -11,8 +11,8 @@
     position: fixed;
     left: 0;
     top: 0;
-    background-color: rgb(63, 61, 61);
-    z-index: 2;
+    background-color: rgb(63, 61, 61, 0.5);
+    z-index: 11;
   }
   
   .diary__newproduct__popup_container {
@@ -85,8 +85,8 @@
     border-radius: 25px 25px 20px 20px;
     background-color: rgb(228, 238, 238);
     text-align: left;
-    padding: 25px 20px 20px 20px;
-    margin-top: 15px;
+    padding: 0px 0px 0px 25px;
+    margin-top: 10px;
   }
   .newproduct__popup_table {
     display: flex;
