--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -1,10 +1,19 @@
-.diary__form__search {
+.diary__form__search-1,
+.diary__form__search-2,
+.diary__form__search-3,
+.diary__form__search-4 {
   max-width: 1101px;
   height: 35px;
   border-radius: 35px;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: "Montserrat", sans-serif;
 }
 
-#diary-search {
+#diary-search-1,
+#diary-search-2,
+#diary-search-3,
+#diary-search-4 {
   width: 100%;
   height: 50px;
   border-radius: 35px;
@@ -18,14 +27,15 @@
   display: flex;
   align-items: center;
   max-width: 100%;
-  height: 50px;
-  border: 1px solid rgb(10, 155, 171);
-  margin-top: 20px;
+  height: 60px;
   padding-left: 30px;
   padding-right: 10px;
   justify-content: space-between;
+  background-color: white;
+  position: -webkit-sticky;
+  position: sticky;
 }
 
 .search-result {
-  width: 50%;
+  width: 60%;
 }/*# sourceMappingURL=search.css.map */
