--- a/assets/styles/scss/pages/search.scss
+++ b/assets/styles/scss/pages/search.scss
@@ -1,10 +1,19 @@
-.diary__form__search {
+@import "../layouts/variables.scss";
+
+.diary__form__search-1,
+.diary__form__search-2,
+.diary__form__search-3,
+.diary__form__search-4 {
   max-width: 1101px;
   height: 35px;
   border-radius: 35px;
+  @include font (400, 20px);
 }
 
-#diary-search {
+#diary-search-1,
+#diary-search-2,
+#diary-search-3,
+#diary-search-4{
     width: 100%;
     height: 50px;
     border-radius: 35px;
@@ -12,20 +21,20 @@
     background-color: rgb(246,199,142);
     border: 0cm;
     padding-left: 6%;
+
    
 }
 .elem {
     display:flex;
     align-items: center;
     max-width: 100%;
-    height:50px;
-    border: 1px solid rgb(10,155,171);;
-    margin-top: 20px;
+    height:60px;
     padding-left: 30px;
     padding-right: 10px;
     justify-content: space-between;
+    background-color: white; position: sticky;
 }
 .search-result {
-    width: 50%;
+    width: 60%;
     
 }
