--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -771,6 +771,11 @@ button {
 
 .profile-welcome__wripper,
 .profile-paternity {
+  display: block;
+}
+
+.profile-user,
+.profile-user__settings {
   display: none;
 }
 
