--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -353,7 +353,7 @@ button {
 .profile-user__kkal-block {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   height: 50%;
 }
 
@@ -370,8 +370,12 @@ button {
   font-family: "Inter", sans-serif;
 }
 
+.profile-user__kkal-wrapper-data {
+  width: 60%;
+}
+
 .profile-user__doughnut-chart {
-  height: 18.28vh;
+  width: 30%;
 }
 
 .profile-user__macro {
@@ -448,7 +452,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 41.5%;
+  width: 44.5%;
   height: 100%;
   font-weight: 400;
   font-size: 23px;
@@ -467,6 +471,7 @@ button {
 .profile-user__date {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 3.95vh;
   padding: 0 3% 0 3%;
@@ -616,7 +621,7 @@ button {
     font-size: 20px;
   }
   .profile-user__kkal-name {
-    font-size: calc((100vw + 160px) / 80);
+    font-size: calc((100vw - 160px) / 80);
   }
   .profile-user__macro-block h3 {
     font-size: calc((100vw - 373px) / 53);
@@ -745,6 +750,32 @@ button {
     font-weight: 500;
     font-size: calc((100vw + 12580px) / 580);
     font-family: "Montserrat", sans-serif;
+  }
+  .profile-user__data-name,
+  .profile-user__states-name,
+  .profile-user__kkal-amount,
+  .profile-user__water-amount {
+    font-size: calc((100vw + 365px) / 91);
+  }
+  .profile-user__data-age {
+    font-size: calc((100vw - 457px) / 91);
+  }
+  .profile-user__states-value,
+  .profile-user__date h2 {
+    font-size: calc((100vw + 365px) / 91);
+  }
+  .profile-user__date-value {
+    font-size: calc((100vw + 91px) / 91);
+  }
+  .profile-user__kkal-name,
+  .profile-user__macro-block h3 {
+    font-size: calc((100vw - 91px) / 91);
+  }
+  .profile-user__macro-amount_span {
+    font-size: calc((100vw - 274px) / 91);
+  }
+  .profile-user__water-tracker {
+    font-size: calc((100vw + 182px) / 91);
   }
 }
 .font-black {
