--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -1128,6 +1128,11 @@ button {
   background-color: #E4EEEE;
 }
 
+.profile-welcome__wripper,
+.profile-paternity {
+  display: block;
+}
+
 .profile-user,
 .profile-user__settings {
   display: none;
