--- a/assets/styles/scss/pages/addnewproduct.css
+++ b/assets/styles/scss/pages/addnewproduct.css
@@ -84,7 +84,7 @@
 }
 
 .newproduct__popup_energyvalue {
-  width: 100%;
+  width: auto;
   height: auto;
   display: flex;
   flex-direction: column;
