--- a/assets/styles/scss/pages/addnewproduct.scss
+++ b/assets/styles/scss/pages/addnewproduct.scss
@@ -78,7 +78,7 @@
     padding-left: 10px;
   }
   .newproduct__popup_energyvalue {
-    width: 100%;
+    width: auto;
     height: auto;
     display: flex;
     flex-direction: column;
