Alla's changes check

--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -474,7 +474,7 @@ button {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 3.95vh;
+  height: 7vh;
   padding: 0 3% 0 3%;
 }
 .profile-user__date h2 {
@@ -803,11 +803,10 @@ button {
 
 .profile-welcome__wripper,
 .profile-paternity {
-  display: block;
+  display: flex;
 }
 
-.profile-user,
-.profile-user__settings {
+.profile-user {
   display: none;
 }
 
