--- a/assets/styles/scss/pages/customization.scss
+++ b/assets/styles/scss/pages/customization.scss
@@ -8,8 +8,8 @@
   position: fixed;
   left: 0;
   top: 0;
-  background-color: rgb(63, 61, 61);
-  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 11;
 }
 
 .customization__pop-up.active {
@@ -18,6 +18,7 @@
 
 .customization__pop-up_container {
   display: flex;
+
   width: 100%;
   height: 100%;
 }
