--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -187,6 +187,7 @@ button {
   position: absolute;
   top: -7.81vh;
   height: 16.63vh;
+  max-height: 8.3vw;
   border-radius: 50%;
 }
 
@@ -270,9 +271,9 @@ button {
   justify-content: center;
   align-items: center;
   min-width: 500px;
-  max-width: 738px;
+  max-width: 80vh;
   width: 51.25vw;
-  max-height: 268px;
+  max-height: 12vw;
   height: 26.17vh;
   padding: 10px;
   margin: 9.76vh auto 0px auto;
@@ -376,7 +377,8 @@ button {
 }
 
 .profile-user__doughnut-chart {
-  width: 30%;
+  width: 40%;
+  max-width: 17.28vh;
 }
 
 .profile-user__macro {
@@ -568,20 +570,20 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-.profile-paternity {
+  .profile-paternity {
     font-weight: 300;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-.profile-welcome__form-input {
+  .profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 1440px) / 160);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-.profile-welcome__form-button,
-.profile-welcome__button-reg {
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
     font-weight: 600;
     font-size: calc((100vw + 1760px) / 160);
     font-family: "Montserrat", sans-serif;
@@ -612,7 +614,7 @@ button {
     font-size: calc((100vw + 160px) / 80);
   }
   .profile-user__date h2,
-.profile-user__kkal-amount {
+  .profile-user__kkal-amount {
     font-size: calc((100vw - 106px) / 53);
   }
   .profile-user__date-value {
@@ -662,20 +664,20 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-.profile-paternity {
+  .profile-paternity {
     font-weight: 300;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-.profile-welcome__form-input {
+  .profile-welcome__form-input {
     font-weight: 300;
     font-size: 18px;
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-.profile-welcome__form-button,
-.profile-welcome__button-reg {
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
     font-weight: 600;
     font-size: 20px;
     font-family: "Montserrat", sans-serif;
@@ -720,20 +722,20 @@ button {
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-attribute,
-.profile-paternity {
+  .profile-paternity {
     font-weight: 300;
     font-size: calc((100vw - 40px) / 94);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-input,
-.profile-welcome__form-input {
+  .profile-welcome__form-input {
     font-weight: 300;
     font-size: calc((100vw + 70px) / 110);
     font-family: "Montserrat", sans-serif;
   }
   .profile-RSK__form-button,
-.profile-welcome__form-button,
-.profile-welcome__button-reg {
+  .profile-welcome__form-button,
+  .profile-welcome__button-reg {
     font-weight: 600;
     font-size: calc((100vw - 211px) / 85);
     font-family: "Montserrat", sans-serif;
@@ -746,6 +748,10 @@ button {
     font-weight: 600;
     font-size: calc((100vw - 290px) / 62);
     font-family: "Montserrat", sans-serif;
+  }
+  .profile-notification__content {
+    max-width: 55vh;
+    max-height: 9vw;
   }
   .profile-notification__text {
     font-weight: 500;
