--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -196,6 +196,7 @@ button {
     top: -7.81vh;
 
     height: 16.63vh;
+    max-height: 8.3vw;
 
     border-radius: 50%;
 }
@@ -274,9 +275,9 @@ button {
     align-items: center;
 
     min-width: 500px;
-    max-width: 738px;
+    max-width: 80vh;
     width: 51.25vw;
-    max-height: 268px;
+    max-height: 12vw;
     height: 26.17vh;
     padding: 10px;
     margin: 9.76vh auto 0px auto;
@@ -387,7 +388,9 @@ button {
     width: 60%;
 }
 .profile-user__doughnut-chart {
-    width: 30%;
+    width: 40%;
+    max-width: 17.28vh;
+
 }
 .profile-user__macro {
     display: flex;
@@ -738,7 +741,10 @@ button {
     .profile-welcome__form-greet {
         @include font (600, calc((100vw - 290px) / 62));
     }
-
+    .profile-notification__content{
+        max-width: 55vh;
+        max-height: 9vw
+    }
     .profile-notification__text {
         @include font (500, calc((100vw + 12580px) / 580));
     }
