--- a/assets/styles/scss/pages/index.scss
+++ b/assets/styles/scss/pages/index.scss
@@ -71,6 +71,11 @@ button {
     border-radius: 25px;
 }
 
+.profile-RSK__recommendations-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .profile-RSK__kkal {
     display: flex;
     flex-direction: column;
@@ -149,6 +154,10 @@ button {
     align-self: center;
     cursor: pointer;
     @include button(41%, 12%);
+}
+
+.profile-RSK__form-button-save {
+    margin: 3vh 0;
 }
 
 .profile-RSK__form-button:hover {
