--- a/assets/styles/scss/pages/search.scss
+++ b/assets/styles/scss/pages/search.scss
@@ -50,4 +50,20 @@ margin-left: 25%;
 text-align: center;
 }
 
+#diary-loader {
+  
+    border: 4px solid #f3f3f3; 
+    border-top: 4px solid rgb(101,195,205);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    margin-left: 35vw;
+    margin-top: 10px; 
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 
