--- a/assets/styles/scss/pages/index.css
+++ b/assets/styles/scss/pages/index.css
@@ -136,7 +136,7 @@ button {
   align-self: center;
   cursor: pointer;
   width: 41%;
-  height: 12%;
+  height: 100%;
   min-height: 44px;
   max-height: 105px;
   border: 0;
@@ -144,6 +144,26 @@ button {
   background-color: #F7C78E;
   color: rgba(0, 0, 0, 0.7);
   transition-duration: 1s;
+}
+
+.profile-RSK__form-add {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 11%;
+}
+
+.profile-RSK__checkbox {
+  display: none;
+  width: 35%;
+  font-weight: 600;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+}
+
+#profile-RSK__checkbox {
+  margin-left: 2%;
 }
 
 .profile-RSK__form-button:hover {
@@ -783,6 +803,9 @@ button {
   }
   .profile-user__water-tracker {
     font-size: calc((100vw + 182px) / 91);
+  }
+  .profile-RSK__checkbox {
+    font-size: calc((100vw + 2560px) / 320);
   }
 }
 .font-black {
