--- a/assets/styles/scss/pages/search.css
+++ b/assets/styles/scss/pages/search.css
@@ -29,6 +29,7 @@
   padding-right: 10px;
   justify-content: space-between;
   background-color: white;
+  position: -webkit-sticky;
   position: sticky;
 }
 
@@ -52,9 +53,19 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  animation: spin 2s linear infinite;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
   margin-left: 35vw;
   margin-top: 10px;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
@@ -64,4 +75,11 @@
   100% {
     transform: rotate(360deg);
   }
+}
+.delete-column {
+  border: 0px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-left: 0px;
 }/*# sourceMappingURL=search.css.map */
